# grpc_nginx

./: .gitignore  README.md  build_grpc.sh  build_prj.sh
prjs/: client.sh  kill_servers.sh  nginx_grpc.conf  run.sh  unix_socket.sh
prjs/hello/: CMakeLists.txt  app_client.cpp  app_server.cpp  hello.proto
prjs/robot/: CMakeLists.txt  app_client.cpp  app_server.cpp  robot.proto
